--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
+    />
     <meta name="theme-color" content="#000000" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAfspW-HVPwv4vKWMhIRFGODWflGbvt5vA"></script> 
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <script src="https://secure.mlstatic.com/sdk/javascript/v1/mercadopago.js"></script>
     <meta
       name="description"
